fixed checks on mobile

--- a/assets/css/styles_2.css
+++ b/assets/css/styles_2.css
@@ -478,12 +478,13 @@ div.header-contact-us {
     color: var(--accents-6);
     vertical-align: middle;
     font-size: 24px;
+    margin-right: 6px;
 }
 
 .hero-checks h6 {
-    font-size: 17px;
+    font-size: 16px;
     margin: 0;
-    margin-left: 10px;
+    margin-right: 15px;
     word-wrap: none;
     letter-spacing: 0.65px;
     font-weight: 300;
